--- a/step-5/page.html
+++ b/step-5/page.html
@@ -45,7 +45,7 @@
             <label><input type="radio" name="type" v-model="actionType" value="login">登入</label>
         </div>
         <div class="signUp" v-if="actionType === 'signUp'">
-            <form @submit.prevent=signUp>
+            <form @submit.prevent="signUp">
                 <div class="formRow">
                     用户名<input type="text" v-model="formData.username">
                 </div>
@@ -57,7 +57,7 @@
                 </div>
             </form>
         </div>
-        <div class="login" v-if="actionType=='login'">
+        <div class="login" v-if="actionType==='login'">
             <form @submit.prevent="login">
                 <div class="formRow">
                     用户名<input type="text" v-model="formData.username">
@@ -73,7 +73,8 @@
     </section>
 
     <section id="todo" v-if="currentUser">
-        <p>欢迎你~用户:<span style="color:red">{{currentUser.username}} </span><button @click="logout">登出</button></p>
+        欢迎你~用户:<span style="color:red">{{currentUser.username}} </span>
+        <button @click="logout">登出</button>
         <div class="newTask">
             <input type="text" v-model="newTodo" @keypress.enter="addTodo" placeholder="请输入待办事项">
         </div>
