--- a/step-5/page.html
+++ b/step-5/page.html
@@ -6,53 +6,53 @@
 </head>
 <body>
 <div id="app">
-    <section id="signInAndSignUp" v-if="!currentUser">
-        <h1>待办事项</h1>
-        <div class="sign-login">
-            <label><input type="radio" name="type" v-model="actionType" value="signUp">注册</label>
-            <label><input type="radio" name="type" v-model="actionType" value="login">登入</label>
-        </div>
-        <div class="signUp" v-if="actionType === 'signUp'">
-            <form @submit.prevent="signUp">
-                <div class="formRow">
-                   <span class="username">用户名</span><input type="text" v-model="formData.username">
-                </div>
-                <div class="formRow">
-                   <span class="pwd">密码</span><input type="password" v-model="formData.password">
-                </div>
-                <div class="formActions">
-                    <input type="submit" value="注册">
-                </div>
-            </form>
-        </div>
-        <div class="login" v-if="actionType==='login'">
-            <form @submit.prevent="login">
-                <div class="formRow">
-                    <span class="username">用户名</span><input type="text" v-model="formData.username">
-                </div>
-                <div class="formRow">
-                    <span class="pwd">密码</span><input type="password" v-model="formData.password">
-                </div>
-                <div class="formActions">
-                    <input type="submit" value="登入">
-                </div>
-            </form>
-        </div>
-    </section>
+<section id="signInAndSignUp" v-if="!currentUser">
+    <h1>待办事项</h1>
+    <div class="sign-login">
+        <label><input type="radio" name="type" v-model="actionType" value="signUp">注册</label>
+        <label><input type="radio" name="type" v-model="actionType" value="login">登入</label>
+    </div>
+    <div class="signUp" v-if="actionType === 'signUp'">
+        <form @submit.prevent="signUp">
+            <div class="formRow">
+               <span class="username">用户名</span><input type="text" v-model="formData.username">
+            </div>
+            <div class="formRow">
+               <span class="pwd">密码</span><input type="password" v-model="formData.password">
+            </div>
+            <div class="formActions">
+                <input type="submit" value="注册">
+            </div>
+        </form>
+    </div>
+    <div class="login" v-if="actionType==='login'">
+        <form @submit.prevent="login">
+            <div class="formRow">
+                <span class="username">用户名</span><input type="text" v-model="formData.username">
+            </div>
+            <div class="formRow">
+                <span class="pwd">密码</span><input type="password" v-model="formData.password">
+            </div>
+            <div class="formActions">
+                <input type="submit" value="登入">
+            </div>
+        </form>
+    </div>
+</section>
 
-    <section id="todo" v-if="currentUser">
-        欢迎你~用户:<span style="color:red">{{currentUser.username}} </span>
+<section id="todo" v-if="currentUser">
+      <span class="username">欢迎用户 :  {{currentUser.username}} </span>
         <button @click="logout">登出</button>
         <div class="newTask">
             <input type="text" v-model="newTodo" @keypress.enter="addTodo" placeholder="请输入待办事项">
         </div>
         <ol class="todos">
             <li v-for="todo in todoList">
-                <input type="checkbox" v-model="todo.done" > {{ todo.title }}
-
+                <input type="checkbox" v-model="todo.done" >
+                {{ todo.title }}
                 <span v-if="todo.done">已完成</span>
-                <span v-else>未完成</span>
-
+                <span v-else style="color:red;">未完成</span>
+                <span class="createtime">创建时间: {{todo.createdAt}}</span>
                 <button @click="removeTodo(todo)">删除</button>
             </li>
         </ol>
